--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,38 @@
 	<build>
 
 		<plugins>
+		
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.4</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<failOnError>false</failOnError>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>	
+		
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -303,39 +335,18 @@
 
 		</resources>
 
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh-external</artifactId>
-				<version>2.6</version>
-			</extension>
-
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>2.6</version>
-			</extension>
-		</extensions>
+		
 	</build>
 
 	<distributionManagement>
 		<repository>
-			<id>appjangle-releases</id>
-			<url>${repos.appjangle-releases}</url>
+			<id>bintray-javadelight-javadelight</id>
+			<name>javadelight-javadelight</name>
+			<url>https://api.bintray.com/maven/javadelight/javadelight/delight-async/;publish=1</url>
 		</repository>
-		<snapshotRepository>
-			<id>appjangle-snapshots</id>
-			<url>${repos.appjangle-snapshots}</url>
-		</snapshotRepository>
 	</distributionManagement>
 
 
-	<repositories>
-		<repository>
-			<id>Appjangle Releases</id>
-			<url>http://maven.appjangle.com/appjangle/releases</url>
-		</repository>
-	</repositories>
 
 	<developers>
 		<developer>
@@ -352,6 +363,28 @@
 			<organizationUrl>http://pureleap.com</organizationUrl>
 		</developer>
 	</developers>
+
+	<scm>
+		<connection>scm:git:git@github.com:javadelight/delight-async.git</connection>
+		<url>https://github.com/javadelight/delight-async</url>
+		<developerConnection>scm:git:git@github.com:javadelight/delight-async.git
+		</developerConnection>
+	</scm>
+
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+		<license>
+			<name>GPL</name>
+			<url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
+		</license>
+	</licenses>
 
 	
 
