--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>org.javadelight</groupId>
 	<artifactId>delight-async</artifactId>
 	<version>0.1.5</version>
-	<description>Asynchronous utilities for Java and GWT applications. Includes a simple promise implementation for Java.</description>
+	<description>Asynchronous utilities for Java and GWT applications.</description>
 	<url>https://github.com/javadelight/delight-async</url>
 	<properties>
 		<module.gwtVersion>2.8.2</module.gwtVersion>
@@ -51,7 +51,6 @@
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib.gwt</artifactId>
 			<version>2.13.0</version>
-			<scope>test</scope>
 		</dependency>
 
 		<!-- only for gwt maven plugin!!! -->
